fix(menu): fix misalignment between stages borders

--- a/src/styles/_main.scss
+++ b/src/styles/_main.scss
@@ -5,7 +5,7 @@
      max-width: 430px;
    }
    .stage--column__left-col .menu--section.colum--section {
-     height: 100%;
+    //  height: 100%;
      display: flex;
      flex-direction: column;
      flex-wrap: wrap;
