--- a/src/styles/_menu.scss
+++ b/src/styles/_menu.scss
@@ -11,9 +11,14 @@
   max-height: $menu-height;
   height: 100%;
   align-items: stretch;
+  display: flex;
 }
 
 .menu--box {
+  // border-style: solid;
+  // border-width: 6px;
+  // border-image: url(/images/border.png) 6 fill repeat;
+
   background-color: $menu-background;
   border-color: $menu-border-fill;
   border-width: $stage-border-size;
@@ -88,9 +93,10 @@
 }
 
 .menu--stage {
-  height: 100%;
+  // height: 100%;
   align-content: flex-start;
   display: flex;
+  flex-grow: 1;
 }
 
 .stage--column {
